Fix header style issue on Firefox

--- a/static/css/lithium.css
+++ b/static/css/lithium.css
@@ -2,7 +2,7 @@
   overflow: hidden;
 }
 header {
-  position: fixed;
+  position: relative;
   width: 100%;
   padding: 20px 0;
   background: #000;
